Fix more PMD errors